@@ -1,5 +1,10 @@
 2007-12-28  Alex Graveley  <alex@beatniksoftware.com>
 
+	* er.js: Add Er.DOM.receive, a synchronous DOMEvent listener.  In
+	_copy, don't attempt to copy Element, Document, or Event objs.
+	
+2007-12-28  Alex Graveley  <alex@beatniksoftware.com>
+
 	* er.js: Make link/unlink symmetric, so exit of either link will
 	signal the other.  Make exit(pid, reason) to kill another process
 	work.  Make link exiting immediate, instead of waiting for
